[package]
name = "rustiegb"
version = "0.1.0"
authors = ["Jordi Domènech <jdomenechbborges@gmail.com>"]
edition = "2018"

[dependencies]
piston_window = "0.121.0"
clap = "3.0.5"
gfx_device_gl = "0.16.2"
image = "0.23.14"
readonly = "0.2.0"
cpal = "0.13.4"
anyhow = "1.0.52"
parking_lot = {version = "0.11.2"}

[dev-dependencies]
test-case = "1.2.1"

#[profile.release]
#debug = true
