[package]
name = "rustiegb"
version = "0.1.0"
authors = ["Jordi Domènech <jdomenechbborges@gmail.com>"]
edition = "2018"

[dependencies]
piston_window = "0"
clap = "3"
gfx_device_gl = "0"
image = "0"
readonly = "0"
cpal = "0"
anyhow = "1"
parking_lot = {version = "0"}

[dev-dependencies]
test-case = "1"

#[profile.release]
#debug = true
