[package]
name = "rustiegb"
version = "0.2.0"
authors = ["Jordi Domènech <jdomenechbborges@gmail.com>"]
edition = "2021"

[dependencies]
piston_window = "0"
clap = "4"
gfx_device_gl = "0"
image = "0"
readonly = "0"
cpal = "0"
anyhow = "1"
parking_lot = { version = "0" }
nix = "0"

[dev-dependencies]
test-case = "3"

#[profile.release]
#debug = true
